--- a/data_bike/templates/index.html
+++ b/data_bike/templates/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="embed-container col-lg-12 col-md-12 col-sm-12 shadow">
         <p>
-            Aram Puto
+            Pruebita de integracion
         </p>
     </header>
     <main class="row">
