--- a/data_bike/templates/dashboard1.html
+++ b/data_bike/templates/dashboard1.html
@@ -24,6 +24,8 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.min.css') }}">
+
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
     <style>
