--- a/data_bike/templates/dashboard1.html
+++ b/data_bike/templates/dashboard1.html
@@ -127,7 +127,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="d-none d-md-block">DataBike</span>
+                                <span class="d-none d-md-block">DataBike1</span>
                             </a>
                         </li>
                     </ul>
