--- a/data_bike/templates/dashboard1.html
+++ b/data_bike/templates/dashboard1.html
@@ -9,21 +9,20 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" href="assets/images/icon/logo_bike_vPi_icon.ico">
+    <link rel="icon" type="image/png"
+        href="{{ url_for('static', filename='assets/images/icon/logo_bike_vPi_icon.ico') }}">
 
     <title>DataBike</title>
     <!-- Custom CSS -->
-    <link href="assets/libs/flot/css/float-chart.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link href="assets/libs/jquery-confirm/jquery-confirm.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/libs/jquery-confirm/jquery-confirm.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.min.css') }}">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-<![endif]-->
+    <![endif]-->
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.min.css') }}">
 
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
@@ -42,6 +41,12 @@
             color: #fff;
             background-color: #12cc66ab;
             border-color: #12cc66ab;
+        }
+
+        .btn-status {
+            float: right;
+            margin-bottom: 10px;
+            margin-right: 5px;
         }
 
         .btn-simular:hover {
@@ -67,6 +72,10 @@
             font-size: 12px;
             inline-size: inherit;
             color: red;
+        }
+
+        #reportContainer {
+            height: 800px;
         }
     </style>
 </head>
@@ -99,7 +108,8 @@
                     <!-- ============================================================== -->
                     <a class="navbar-brand" href="index.html">
                         <!-- Logo icon -->
-                        <img src="assets/images/logoDataBike.png" class="light-logo logo" alt="logo" />
+                        <img src="{{ url_for('static', filename='assets/images/logoDataBike.png') }}"
+                            class="light-logo logo" alt="logo" />
                         <!--End Logo icon -->
                     </a>
                     <!-- ============================================================== -->
@@ -208,16 +218,17 @@
             <!-- ============================================================== -->
             <div class="container-fluid">
                 <div class="actions clearfix">
-                    <button type="button" class="btn btn-success btn-simular">Simular</button>
+                    <button type="button" class="btn btn-success btn-simular">Agregar Estación</button>
+                    <button type="button" class="btn btn-info btn-status">Estado</button>
                 </div>
 
                 <div class="row">
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-body">
-                                <iframe width="100%" height="700"
-                                    src="https://app.powerbi.com/view?r=eyJrIjoiMTE1MjEzODItYWMwNy00YjJlLWE1MTItMWYzZjgxNjQzYjk3IiwidCI6IjE5NGFkMDc2LWU4MDQtNGJhMy1hODI1LThiZGYxMWY1Nzg0YiJ9"
-                                    frameborder="0" allowFullScreen="true"></iframe>
+                                <section id="report-container"
+                                    class="embed-container col-lg-offset-4 col-lg-7 col-md-offset-5 col-md-7 col-sm-offset-5 col-sm-7 mt-5">
+                                </section>
                             </div>
                         </div>
                     </div>
@@ -272,6 +283,7 @@
                                     <option value="2">1</option>
                                     <option value="1">2</option>
                                     <option value="15">15</option>
+                                    <option value="18">18</option>
                                 </select>
                             </div>
                         </div>
@@ -281,7 +293,7 @@
 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary btn-add-station">Agregar</button>
+                    <button type="button" class="btn btn-primary btn-add-station">Agregar y Simular</button>
                 </div>
 
             </div>
@@ -297,7 +309,7 @@
     <script src="{{ url_for('static', filename='js/external/jquery-3.4.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/external/powerbi.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/external/custom.min.js') }}"></script>
+    <!--<script src="{{ url_for('static', filename='js/external/custom.min.js') }}"></script>-->
 
     <script lang="javascript">
         $(document).ready(function () {
@@ -339,6 +351,25 @@
                         //console.log(response);
                     });
                 }
+            });
+
+            $(".btn-status").click(function () {
+                $.ajax({
+                    type: "GET",
+                    url: "https://amorcecian.pythonanywhere.com/status",
+                    success: function (data) {
+                        $.alert({
+                            type: 'blue',
+                            title: 'Estado del sistema',
+                            content: data,
+                            buttons: {
+                                OK: function () {
+
+                                },
+                            }
+                        });
+                    }
+                });
             });
 
         });
