--- a/data_bike/templates/dashboard1.html
+++ b/data_bike/templates/dashboard1.html
@@ -309,7 +309,7 @@
     <script src="{{ url_for('static', filename='js/external/jquery-3.4.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/external/powerbi.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
-    <!--<script src="{{ url_for('static', filename='js/external/custom.min.js') }}"></script>-->
+    <script src="{{ url_for('static', filename='js/external/custom.min.js') }}"></script>
 
     <script lang="javascript">
         $(document).ready(function () {
