--- a/data_bike/templates/dashboard1.html
+++ b/data_bike/templates/dashboard1.html
@@ -310,6 +310,8 @@
     <script src="{{ url_for('static', filename='js/external/powerbi.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
     <script src="{{ url_for('static', filename='js/external/custom.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/libs/jquery-confirm/jquery-confirm.min.js') }}"></script>
+
 
     <script lang="javascript">
         $(document).ready(function () {
