Change Section Dashboard

--- a/data_bike/templates/dashboard1.html
+++ b/data_bike/templates/dashboard1.html
@@ -74,9 +74,6 @@
             color: red;
         }
 
-        #reportContainer {
-            height: 800px;
-        }
     </style>
 </head>
 
@@ -226,8 +223,7 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-body">
-                                <section id="report-container"
-                                    class="embed-container col-lg-offset-4 col-lg-7 col-md-offset-5 col-md-7 col-sm-offset-5 col-sm-7 mt-5">
+                                <section id="report-container">
                                 </section>
                             </div>
                         </div>
