Change css Dashboard

--- a/data_bike/templates/dashboard1.html
+++ b/data_bike/templates/dashboard1.html
@@ -68,6 +68,10 @@
             border-color: #12CC66;
         }
 
+        .report-container{
+            height: 600px;
+        }
+
         .error {
             font-size: 12px;
             inline-size: inherit;
