Change CSS in Dashboard 1

--- a/data_bike/templates/dashboard1.html
+++ b/data_bike/templates/dashboard1.html
@@ -68,7 +68,7 @@
             border-color: #12CC66;
         }
 
-        .report-container{
+        #report-container{
             height: 600px;
         }
 
