--- a/data_bike/templates/dashboard1.html
+++ b/data_bike/templates/dashboard1.html
@@ -68,7 +68,7 @@
             border-color: #12CC66;
         }
 
-        #report-container{
+        #report-container {
             height: 600px;
         }
 
@@ -77,7 +77,6 @@
             inline-size: inherit;
             color: red;
         }
-
     </style>
 </head>
 
@@ -311,6 +310,9 @@
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
     <script src="{{ url_for('static', filename='js/external/custom.min.js') }}"></script>
 
+    <!--Menu sidebar -->
+    <script src="{{ url_for('static', filename='js/external/sidebarmenu.js') }}"></script>
+    
     <script src="{{ url_for('static', filename='assets/libs/jquery-validation/dist/jquery.validate.min.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/libs/jquery-confirm/jquery-confirm.min.js') }}"></script>
 
