Add perfect-scrollbar library

--- a/data_bike/templates/dashboard1.html
+++ b/data_bike/templates/dashboard1.html
@@ -171,10 +171,10 @@
                                 href="javascript:void(0)" aria-expanded="false"><i
                                     class="mdi mdi-view-dashboard"></i><span class="hide-menu">Dashboards </span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
-                                <li class="sidebar-item"><a href="dashboard1.html" class="sidebar-link"><i
+                                <li class="sidebar-item"><a href="dashboard1" class="sidebar-link"><i
                                             class="mdi mdi-chart-bar"></i><span class="hide-menu"> Dashboard 1
                                         </span></a></li>
-                                <li class="sidebar-item"><a href="dashboard2.html" class="sidebar-link"><i
+                                <li class="sidebar-item"><a href="dashboard2" class="sidebar-link"><i
                                             class="mdi mdi-chart-areaspline"></i><span class="hide-menu"> Dashboard 2
                                         </span></a></li>
                             </ul>
@@ -313,6 +313,7 @@
     <!--Menu sidebar -->
     <script src="{{ url_for('static', filename='js/external/sidebarmenu.js') }}"></script>
     
+    <script src="{{ url_for('static', filename='assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/libs/jquery-validation/dist/jquery.validate.min.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/libs/jquery-confirm/jquery-confirm.min.js') }}"></script>
 
