Change index format

--- a/data_bike/templates/dashboard1.html
+++ b/data_bike/templates/dashboard1.html
@@ -106,7 +106,7 @@
                     <!-- ============================================================== -->
                     <!-- Logo -->
                     <!-- ============================================================== -->
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="https://amorcecian.pythonanywhere.com/">
                         <!-- Logo icon -->
                         <img src="{{ url_for('static', filename='assets/images/logoDataBike.png') }}"
                             class="light-logo logo" alt="logo" />
@@ -137,7 +137,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="d-none d-md-block">DataBike1</span>
+                                <span class="d-none d-md-block">DataBike</span>
                             </a>
                         </li>
                     </ul>
