--- a/data_bike/templates/index.html
+++ b/data_bike/templates/index.html
@@ -6,17 +6,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='assets/images/icon/logo_bike_vPi_icon.ico') }}">
+    <link rel="icon" type="image/png"
+        href="{{ url_for('static', filename='assets/images/icon/logo_bike_vPi_icon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/external/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
-    <title>Embedded Power BI report</title>
+    <title>DataBike</title>
+
+    <style>
+        .logo {
+            width: 200px;
+        }
+
+        body {
+            font-family: "Montserrat";
+        }
+    </style>
 </head>
 
 <body>
-    <header class="embed-container col-lg-12 col-md-12 col-sm-12 shadow">
-        <p>
-            Pruebita de integracion
-        </p>
+    <header class="topbar" data-navbarbg="skin5">
+        <nav class="navbar top-navbar navbar-expand-md navbar-dark">
+            <div class="navbar-header" data-logobg="skin5">
+                <!-- This is for the sidebar toggle which is visible on mobile only -->
+                <a class="nav-toggler waves-effect waves-light d-block d-md-none" href="javascript:void(0)"><i
+                        class="ti-menu ti-close"></i></a>
+                <!-- ============================================================== -->
+                <!-- Logo -->
+                <!-- ============================================================== -->
+                <a class="navbar-brand" href="https://amorcecian.pythonanywhere.com/">
+                    <!-- Logo icon -->
+                    <img src="{{ url_for('static', filename='assets/images/logoDataBike.png') }}"
+                    class="light-logo logo" alt="logo" />
+                    <!--End Logo icon -->
+                </a>
+                <!-- ============================================================== -->
+                <!-- End Logo -->
+                <!-- ============================================================== -->
+                <!-- ============================================================== -->
+                <!-- Toggle which is visible on mobile only -->
+                <!-- ============================================================== -->
+                <a class="topbartoggler d-block d-md-none waves-effect waves-light" href="javascript:void(0)"
+                    data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation"><i class="ti-more"></i>
+                </a>
+
+            </div>
+            <!-- ============================================================== -->
+            <!-- End Logo -->
+            <!-- ============================================================== -->
+            <div class="navbar-collapse collapse" id="navbarSupportedContent" data-navbarbg="skin5">
+                <!-- ============================================================== -->
+                <!-- toggle and nav items -->
+                <!-- ============================================================== -->
+                <ul class="navbar-nav float-left mr-auto">
+                    <!-- ============================================================== -->
+                    <!-- create new -->
+                    <!-- ============================================================== -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="d-none d-md-block">DataBike</span>
+                        </a>
+                    </li>
+                </ul>
+                <!-- ============================================================== -->
+                <!-- Right side toggle and nav items -->
+                <!-- ============================================================== -->
+                <ul class="navbar-nav float-right">
+                </ul>
+            </div>
+        </nav>
     </header>
     <main class="row">
         <section id="text-container" class="embed-container col-lg-4 col-md-4 col-sm-4 mb-5 ml-5 mt-5">
