--- a/data_bike/templates/index.html
+++ b/data_bike/templates/index.html
@@ -105,11 +105,11 @@
             <nav class="sidebar-nav">
                 <ul id="sidebarnav" class="p-t-30">
                     <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                            href="https://amorcecian.pythonanywhere.com/" aria-expanded="false"><i
-                                class="mdi mdi-home"></i><span class="hide-menu">Home</span></a></li>
+                            href="https://amorcecian.pythonanywhere.com/" aria-expanded="false"><i class="mdi mdi-home"></i><span
+                                class="hide-menu">Home</span></a></li>
                     <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark"
-                            href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span
-                                class="hide-menu">Dashboards </span></a>
+                            href="javascript:void(0)" aria-expanded="false"><i
+                                class="mdi mdi-view-dashboard"></i><span class="hide-menu">Dashboards </span></a>
                         <ul aria-expanded="false" class="collapse  first-level">
                             <li class="sidebar-item"><a href="dashboard1" class="sidebar-link"><i
                                         class="mdi mdi-chart-bar"></i><span class="hide-menu"> Dashboard 1
@@ -132,28 +132,6 @@
     <!-- Page wrapper  -->
     <!-- ============================================================== -->
     <div class="page-wrapper">
-        <!-- ============================================================== -->
-        <!-- Bread crumb and right sidebar toggle -->
-        <!-- ============================================================== -->
-        <div class="page-breadcrumb">
-            <div class="row">
-                <div class="col-12 d-flex no-block align-items-center">
-                    <h4 class="page-title">Dashboard 1</h4>
-                    <div class="ml-auto text-right">
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="https://amorcecian.pythonanywhere.com/">Home</a>
-                                </li>
-                                <li class="breadcrumb-item active" aria-current="page">Dashboard 1</li>
-                            </ol>
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- ============================================================== -->
-        <!-- End Bread crumb and right sidebar toggle -->
-        <!-- ============================================================== -->
         <!-- ============================================================== -->
         <!-- Container fluid  -->
         <!-- ============================================================== -->
