--- a/data_bike/templates/index.html
+++ b/data_bike/templates/index.html
@@ -51,7 +51,7 @@
                     <!-- ============================================================== -->
                     <!-- Logo -->
                     <!-- ============================================================== -->
-                    <a class="navbar-brand" href="https://amorcecian.pythonanywhere.com/">
+                    <a class="navbar-brand" href="https://amorcecian.pythonanywhere.com/home">
                         <!-- Logo icon -->
                         <img src="{{ url_for('static', filename='assets/images/logoDataBike.png') }}"
                             class="light-logo logo" alt="logo" />
@@ -107,7 +107,7 @@
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav" class="p-t-30">
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                                href="https://amorcecian.pythonanywhere.com/" aria-expanded="false"><i
+                                href="https://amorcecian.pythonanywhere.com/home" aria-expanded="false"><i
                                     class="mdi mdi-home"></i><span class="hide-menu">Home</span></a></li>
                         <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark"
                                 href="javascript:void(0)" aria-expanded="false"><i
