Correccion de vinculos

--- a/data_bike/templates/authentication-login.html
+++ b/data_bike/templates/authentication-login.html
@@ -46,7 +46,7 @@
                         <span class="db"><img src="{{ url_for('static', filename='assets/images/logoDataBike.png') }}" style="width: 400px;" alt="logo" /></span>
                     </div>
                     <!-- Form -->
-                    <form class="form-horizontal m-t-20" id="loginform" action="https://amorcecian.pythonanywhere.com/home">
+                    <form class="form-horizontal m-t-20" id="loginform" action="https://amorcecian.pythonanywhere.com/home/">
                         <div class="row p-b-30">
                             <div class="col-12">
                                 <div class="input-group mb-3">
