Add report in home page

--- a/data_bike/templates/home.html
+++ b/data_bike/templates/home.html
@@ -37,6 +37,10 @@
         #report-container {
             height: 600px;
         }
+
+        .report-container{
+            height: 600px;
+        }
     </style>
 </head>
 
@@ -142,7 +146,10 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-body">
-                                <section id="report-container">
+                                <section class="report-container">
+                                    <iframe width="100%" height="700"
+                                    src="https://app.powerbi.com/view?r=eyJrIjoiMTE1MjEzODItYWMwNy00YjJlLWE1MTItMWYzZjgxNjQzYjk3IiwidCI6IjE5NGFkMDc2LWU4MDQtNGJhMy1hODI1LThiZGYxMWY1Nzg0YiJ9"
+                                    frameborder="0" allowFullScreen="true"></iframe>
                                 </section>
                             </div>
                         </div>
